--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,19 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '20'
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - name: npm install
         env:
           CI: true
         run: |
           npm ci
+
+      - name: deploy
+        run: |
+          zip -j deploy.zip index.js
+          aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:697083516305:function:google-sheets-testing --zip-file fileb://deploy.zip
