--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,5 @@ jobs:
 
       - name: deploy
         run: |
-          zip -r deploy.zip /.
+          zip -r deploy.zip index.js node_modules
           aws lambda update-function-code --function-name arn:aws:lambda:us-east-1:697083516305:function:google-sheets-testing --zip-file fileb://deploy.zip
